[package]
name = "kemet"
version = "0.1.0"
edition = "2018"
authors = ["Vinícius V. Viterbo"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# The profile used for 'cargo build'
#[profile.dev]
#panic = "abort" # Disables stack unwinding on panic

# The profile used for cargo build --release
#[profile.release]
#panic = "abort" # Disables stack unwinding on panic
